fixed cards width and overlapping

--- a/styles.css
+++ b/styles.css
@@ -203,6 +203,68 @@ div.progress-container > div.mongo-prog {
 }
 
 
+main > section.projects {
+    width: 100%;
+    padding: 5rem 8rem;
+    background-color: #f7fafc;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+main > section.projects  > h2{
+    margin-bottom: 2rem;
+}
+
+main > section.projects > div.cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: flex-start;
+    /* margin: -0.5rem; */
+}
+
+
+div.cards > div.card {
+    width: 30%;
+    height: 400px;
+    margin: 1rem;
+}
+
+div.card > div.project-image {
+    height: 210px;
+    background-color: #e2e8f0;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+div.card > div.project-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    background-color: #97a1b6;
+    height: 210px;
+    padding: 2rem;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+div.card > div.project-info > h3 {
+    font-size: larger;
+}
+
+div.card > div.project-info > a {
+    display: block;
+    text-decoration: none;
+    padding: 5px;
+    background-color: #f59e0b;
+    width: 120px;
+    border-radius: 5px;
+    text-align: center;
+    color: white;
+}
+
+
 @media(max-width:900px){
     header > nav > ul > li:nth-last-child(1) {
         margin-right:0;
@@ -229,5 +291,9 @@ div.progress-container > div.mongo-prog {
 
     section.info > div.skills > h3{
         margin-bottom: 2rem;
+    }
+
+    div.cards > div.card {
+        width: 48%;
     }
 }
